2009-07-17 Removed fossils from swig version of agg backend. - EF

2009-07-14 initial submission of the annotation guide. -JJL

2009-07-14 axes_grid : minor improvements in anchored_artists and
           inset_locator. -JJL

2009-07-14 Fix a few bugs in ConnectionStyle algorithms. Add
           ConnectionPatch class. -JJL

2009-07-11 Added a fillstyle Line2D property for half filled markers
           -- see examples/pylab_examples/fillstyle_demo.py JDH

2009-07-08 Attempt to improve performance of qt4 backend, do not call
           qApp.processEvents while processing an event. Thanks Ole
           Streicher for tracking this down - DSD

2009-06-24 Add withheader option to mlab.rec2csv and changed
  use_mrecords default to False in mlab.csv2rec since this is
  partially broken - JDH

2009-06-24 backend_agg.draw_marker quantizes the main path (as in the
           draw_path). - JJL

2009-06-24 axes_grid: floating axis support added. - JJL

2009-06-14 Add new command line options to backend_driver.py to support
           running only some directories of tests - JKS

2009-06-13 partial cleanup of mlab and its importation in pylab - EF

2009-06-13 Introduce a rotation_mode property for the Text artist. See
           examples/pylab_examples/demo_text_rotation_mode.py -JJL

2009-06-07 add support for bz2 files per sf support request 2794556 -
           JDH

2009-06-06 added a properties method to the artist and inspector to
           return a dict mapping property name -> value; see sf
           feature request 2792183 - JDH

2009-06-06 added Neil's auto minor tick patch; sf patch #2789713 - JDH

2009-06-06 do not apply alpha to rgba color conversion if input is
           already rgba - JDH

2009-06-03 axes_grid : Initial check-in of curvelinear grid support. See
           examples/axes_grid/demo_curvelinear_grid.py - JJL

2009-06-01 Add set_color method to Patch - EF

2009-06-01 Spine is now derived from Patch - ADS
